--- a/templates/form.html
+++ b/templates/form.html
@@ -8,14 +8,14 @@
 <body>
     <h1>Skriv ett inlägg</h1>
     <form method="POST">
-        <label for="name">Namn:</label>
-        <input type="text" name="name" id="name" required>
+        <label>Username:</label>
+        <input type="text" name="name">
 
-        <label for="email">E-post:</label>
-        <input type="email" name="email" id="email" required>
+        <label>E-post:</label>
+        <input type="email" name="email">
 
-        <label for="message">Meddelande:</label>
-        <textarea name="message" id="message" required></textarea>
+        <label>Meddelande:</label>
+        <textarea name="message" required></textarea>
 
         <button type="submit">Skicka</button>
     </form>
