--- a/templates/register.html
+++ b/templates/register.html
@@ -6,23 +6,20 @@
 </head>
 <body>
     <h1>Skapa konto</h1>
+
     <form method="POST">
         <label>Användarnamn:</label>
-        <input type="text" name="username" required>
-
+        <input type="text" name="username" required><br>
 
         <label>Email:</label>
-        <input type="email" name="email" required>
-
+        <input type="email" name="email" required><br>
 
         <label>Lösenord:</label>
-        <input type="password" name="password" required>
-
+        <input type="password" name="password" required><br>
 
         <button type="submit">Registrera</button>
     </form>
 
-
-    <a href="{{ url_for('login') }}">Logga in</a>
+    <p>Redan medlem? <a href="{{ url_for('login') }}">Logga in här</a></p>
 </body>
 </html>
